// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Header Renders with back icon 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "skyblue",
        "flexDirection": "row",
        "paddingLeft": 17,
        "paddingTop": NaN,
        "paddingVertical": 28,
      }
    }
  >
    <Component
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "gray",
          "fontSize": 20,
          "textAlign": "center",
        }
      }
    >
      Component List
    </Text>
  </Component>
  <MenuSeparator />
</TouchableOpacity>
`;

exports[`Navigation Header Renders without back icon 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "skyblue",
        "flexDirection": "row",
        "paddingLeft": 17,
        "paddingTop": NaN,
        "paddingVertical": 28,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../packages/app/src/components/navigation/back-icon.png",
        }
      }
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "gray",
          "fontSize": 20,
          "textAlign": "center",
        }
      }
    >
      Component List
    </Text>
  </Component>
  <MenuSeparator />
</TouchableOpacity>
`;
